Add extensive debugging to workflow execution

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,22 +10,40 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - name: Debug workflow execution
+      run: |
+        echo "=== WORKFLOW DEBUG START ==="
+        echo "Current working directory: $(pwd)"
+        echo "Current user: $(whoami)"
+        echo "Current date/time: $(date)"
+        echo "Environment variables:"
+        env | sort
+        echo "=== WORKFLOW DEBUG END ==="
+        
     - name: Test before SSH
       run: |
         echo "Step 1: Before SSH setup"
         echo "dummy_test_file" > /tmp/test_file.txt
         cat /tmp/test_file.txt
+        echo "Test file created at: /tmp/test_file.txt"
         
     - name: Create SSH key file
       run: |
+        echo "Creating SSH key file..."
         mkdir -p ~/.ssh
+        echo "SSH directory created"
         echo "${{ secrets.SERVER_SSH_KEY }}" > ~/.ssh/id_rsa
+        echo "SSH key written to file"
         chmod 600 ~/.ssh/id_rsa
+        echo "SSH key permissions set"
         ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
+        echo "SSH host key added to known_hosts"
         
     - name: Test after SSH
       run: |
         echo "Step 2: After SSH setup"
         echo "SSH key file exists:" 
         ls -la ~/.ssh/id_rsa || echo "SSH key file not found"
+        echo "SSH directory contents:"
+        ls -la ~/.ssh/ || echo "SSH directory not found"
         echo "Test completed successfully!"
