--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,24 @@ jobs:
         echo "Cloning repository..."
         git clone https://github.com/mar0der/nutritrack.git .
         
+        # Navigate to deployment directory
+        cd deployment
+        
+        # Create .env file with dummy data
+        echo "Creating .env file with dummy data..."
+        {
+          echo "DOMAIN_NAME=nerdstips.com"
+          echo "DB_PASSWORD=test_db_password"
+          echo "GOOGLE_CLIENT_ID=test_google_client_id"
+          echo "GOOGLE_CLIENT_SECRET=test_google_client_secret"
+          echo "JWT_SECRET=test_jwt_secret_hardcoded"
+          echo "VITE_API_URL=/api"
+        } > .env
+        
+        # Debug: Show .env file creation
+        echo "DEBUG: .env file created:"
+        cat .env
+        
         echo "Deployment completed successfully!"
         
         EOF
