--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,23 +62,31 @@ jobs:
         echo "DEBUG: .env file created:"
         cat .env
         
-        # Copy production docker-compose to main file
-        echo "Setting up Docker Compose configuration..."
-        cp docker-compose-prod.yml docker-compose.yml
-        
         # Make scripts executable
         chmod +x *.sh || true
         
-        # Run server setup scripts
-        echo "Running server setup scripts..."
-        if [ -f "generate-ssl.sh" ]; then
-          echo "Generating SSL certificates..."
-          ./generate-ssl.sh
-        fi
-        
-        if [ -f "generate-nginx-config.sh" ]; then
-          echo "Generating Nginx configuration..."
+        # Generate SSL certificates (Let's Encrypt or self-signed fallback)
+        echo "🔒 Setting up SSL certificates..."
+        if [ -n "$DOMAIN_NAME" ]; then
+          echo "🌐 Using Let's Encrypt for domain: $DOMAIN_NAME"
+          
+          # Check if Let's Encrypt certificates already exist
+          if [ -f "letsencrypt/live/$DOMAIN_NAME/fullchain.pem" ]; then
+            echo "✅ Let's Encrypt certificates found, using existing certificates"
+          else
+            echo "🔧 Generating new Let's Encrypt certificates..."
+            # Run Docker-based Let's Encrypt setup
+            ./docker-letsencrypt-setup.sh $DOMAIN_NAME admin@$DOMAIN_NAME
+          fi
+          
+          # Use production docker-compose configuration
+          echo "📋 Using production Docker Compose configuration"
+          cp docker-compose-prod.yml docker-compose.yml
           ./generate-nginx-config.sh
+        else
+          echo "🔒 Using self-signed certificates (no domain configured)"
+          ./generate-ssl.sh
+          cp docker-compose-prod.yml docker-compose.yml
         fi
         
         # Stop existing containers
