--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
           echo "GOOGLE_CLIENT_ID=$GOOGLE_CLIENT_ID"
           echo "GOOGLE_CLIENT_SECRET=$GOOGLE_CLIENT_SECRET"
           echo "JWT_SECRET=$JWT_SECRET"
-          echo "VITE_API_URL=/api"
+          echo "VITE_API_URL=https://api.$DOMAIN_NAME/v1"
         } > .env
         
         # Debug: Show .env file creation
@@ -101,7 +101,7 @@ jobs:
             docker run -d --name nginx-temp -p 80:80 -v /var/www/certbot:/var/www/certbot -v /tmp/nginx-acme.conf:/etc/nginx/conf.d/default.conf nginx:alpine
             
             # Run Buypass certificate generation (no registration required)
-            docker run --rm -v /etc/letsencrypt:/etc/letsencrypt -v /var/www/certbot:/var/www/certbot certbot/certbot certonly --webroot --webroot-path=/var/www/certbot --email admin@$DOMAIN_NAME --agree-tos --no-eff-email --server https://api.buypass.com/acme/directory -d $DOMAIN_NAME -d www.$DOMAIN_NAME --non-interactive
+            docker run --rm -v /etc/letsencrypt:/etc/letsencrypt -v /var/www/certbot:/var/www/certbot certbot/certbot certonly --webroot --webroot-path=/var/www/certbot --email admin@$DOMAIN_NAME --agree-tos --no-eff-email --server https://api.buypass.com/acme/directory -d $DOMAIN_NAME -d www.$DOMAIN_NAME -d api.$DOMAIN_NAME --non-interactive
             
             # Stop temporary nginx
             docker stop nginx-temp && docker rm nginx-temp
