--- a/deployment/nginx-letsencrypt.conf
+++ b/deployment/nginx-letsencrypt.conf
@@ -3,7 +3,7 @@
 # HTTP server - redirect to HTTPS and handle Let's Encrypt challenges
 server {
     listen 80;
-    server_name ${DOMAIN_NAME};
+    server_name ${DOMAIN_NAME} www.${DOMAIN_NAME} api.${DOMAIN_NAME};
     
     # Let's Encrypt challenge location
     location /.well-known/acme-challenge/ {
@@ -16,10 +16,10 @@ server {
     }
 }
 
-# HTTPS server with Let's Encrypt certificates
+# HTTPS server for main website (${DOMAIN_NAME} and www.${DOMAIN_NAME})
 server {
     listen 443 ssl http2;
-    server_name ${DOMAIN_NAME};
+    server_name ${DOMAIN_NAME} www.${DOMAIN_NAME};
     
     # Let's Encrypt SSL configuration
     ssl_certificate /etc/letsencrypt/live/${DOMAIN_NAME}/fullchain.pem;
@@ -96,5 +96,70 @@ server {
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, no-transform";
+    }
+}
+
+# HTTPS server for API subdomain (api.${DOMAIN_NAME})
+server {
+    listen 443 ssl http2;
+    server_name api.${DOMAIN_NAME};
+    
+    # Let's Encrypt SSL configuration
+    ssl_certificate /etc/letsencrypt/live/${DOMAIN_NAME}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${DOMAIN_NAME}/privkey.pem;
+    
+    # SSL security settings (Mozilla Modern configuration)
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_timeout 1d;
+    ssl_session_tickets off;
+    
+    # OCSP stapling
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    ssl_trusted_certificate /etc/letsencrypt/live/${DOMAIN_NAME}/chain.pem;
+    
+    # Security headers for API
+    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+    add_header X-Frame-Options DENY always;
+    add_header X-Content-Type-Options nosniff always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    
+    # API routes - proxy to backend
+    location /v1/ {
+        proxy_pass http://api:3001/v1/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        
+        # CORS headers for API
+        add_header Access-Control-Allow-Origin $http_origin always;
+        add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header Access-Control-Allow-Headers 'Accept, Authorization, Content-Type, X-Requested-With' always;
+        add_header Access-Control-Allow-Credentials true always;
+        
+        # Handle preflight requests
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+    }
+    
+    # Health check proxy
+    location /health {
+        proxy_pass http://api:3001/health;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
+    # Block all other requests on API subdomain
+    location / {
+        return 404;
     }
 }
