--- a/deployment/nginx-letsencrypt.conf
+++ b/deployment/nginx-letsencrypt.conf
@@ -72,16 +72,7 @@ server {
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
         
-        # CORS headers for API
-        add_header Access-Control-Allow-Origin $http_origin always;
-        add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
-        add_header Access-Control-Allow-Headers 'Accept, Authorization, Content-Type, X-Requested-With' always;
-        add_header Access-Control-Allow-Credentials true always;
-        
-        # Handle preflight requests
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
+        # CORS is handled by Express app - no need for Nginx CORS headers
     }
     
     # Health check proxy
@@ -138,16 +129,7 @@ server {
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
         
-        # CORS headers for API
-        add_header Access-Control-Allow-Origin $http_origin always;
-        add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
-        add_header Access-Control-Allow-Headers 'Accept, Authorization, Content-Type, X-Requested-With' always;
-        add_header Access-Control-Allow-Credentials true always;
-        
-        # Handle preflight requests
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
+        # CORS is handled by Express app - no need for Nginx CORS headers
     }
     
     # Health check proxy
